syntax = "proto3";

package pb;

import "global.proto";

// todo: change cid to u64 > not yet
// todo: add comment, like, repost

// rules: qevent_rpc
service RPC_Channel {
    //rpc Channel (Param) returns (Response);

    // CrDU
    rpc ChannelCreateChannel (ChannelCreateChannelParam) returns (ChannelCreateChannelResponse); // qevent_id_50
    rpc ChannelEditChannel (ChannelEditChannelParam) returns (ChannelEditChannelResponse); // qevent
    rpc ChannelDeleteChannel (ChannelDeleteChannelParam) returns (ChannelDeleteChannelResponse); // qevent

    // Author
    rpc ChannelAddAuthor (ChannelAddAuthorParam) returns (ChannelAddAuthorResponse); // qevent_id_60
    rpc ChannelChangeAuthorPermission (ChannelChangeAuthorPermissionParam) returns (ChannelChangeAuthorPermissionResponse); // qevent
    rpc ChannelRemoveAuthor (ChannelRemoveAuthorParam) returns (ChannelRemoveAuthorResponse); // qevent

    // Follow
    rpc ChannelFollowChannel (ChannelFollowChannelParam) returns (ChannelFollowChannelResponse); // qevent_id_30
    rpc ChannelUnFollowChannel (ChannelUnFollowChannelParam) returns (ChannelUnFollowChannelResponse); // qevent
    rpc ChannelRemoveFollowers (ChannelRemoveFollowersParam) returns (ChannelRemoveFollowersResponse); // qevent

    // Subscribe
    rpc ChannelSubscribe (ChannelSubscribeParam) returns (ChannelSubscribeResponse); // qevent_id_40
    rpc ChannelUnSubscribe (ChannelUnSubscribeParam) returns (ChannelUnSubscribeResponse); // qevent
    rpc ChannelRemoveSubscribers (ChannelRemoveSubscribersParam) returns (ChannelRemoveSubscribersResponse); // qevent

    // Privacy
    rpc ChannelChangePrivacy (ChannelChangePrivacyParam) returns (ChannelChangePrivacyResponse); // qevent_id_70
    rpc ChannelChangeDefaultPermission (ChannelChangeDefaultPermissionParam) returns (ChannelChangeDefaultPermissionResponse);  // qevent
    rpc ChannelRevokeLink (ChannelRevokeLinkParam) returns (ChannelRevokeLinkResponse); // qevent
    rpc ChannelChangeUsername (ChannelChangeUsernameParam) returns (ChannelChangeUsernameResponse); // qevent
    rpc ChannelBlockChannel (ChannelBlockChannelParam) returns (ChannelBlockChannelResponse); // qevent

    // Messages
    rpc ChannelSendMessage (ChannelSendMessageParam) returns (ChannelSendMessageResponse); // qevent_id_10
    rpc ChannelEditMessage (ChannelEditMessageParam) returns (ChannelEditMessageResponse); // qevent
    rpc ChannelPinMessage (ChannelPinMessageParam) returns (ChannelPinMessageResponse); // qevent
    rpc ChannelUnPinMessage (ChannelUnPinMessageParam) returns (ChannelUnPinMessageResponse); // qevent
    rpc ChannelDeleteMessages (ChannelDeleteMessagesParam) returns (ChannelDeleteMessagesResponse); // qevent
    rpc ChannelClearHistory (ChannelClearHistoryParam) returns (ChannelClearHistoryResponse); // qevent

    // Settings
    //rpc Channel (Param) returns (Response);

    // Others
    rpc ChannelAvatarAdd (ChannelAvatarAddParam) returns (ChannelAvatarAddResponse); // qevent_id_80
    rpc ChannelAvatarChange (ChannelAvatarChangeParam) returns (ChannelAvatarChangeResponse); // remove? // qevent
    rpc ChannelAvatarDelete (ChannelAvatarDeleteParam) returns (ChannelAvatarDeleteResponse); // qevent
    rpc ChannelSendDoingAction (ChannelSendDoingActionParam) returns (ChannelSendDoingActionResponse); // qevent
    rpc ChannelReportChannel (ChannelReportChannelParam) returns (ChannelReportChannelResponse); // qevent?
    rpc ChannelReportMessage (ChannelReportMessageParam) returns (ChannelReportMessageResponse); // qevent?

    // Views
    rpc ChannelGetFull (ChannelGetFullParam) returns (ChannelGetFullResponse);
    rpc ChannelGetMessagesList (ChannelGetMessagesListParam) returns (ChannelGetMessagesListResponse);
    rpc ChannelGetMediaList (ChannelGetMediaListParam) returns (ChannelGetMediaListResponse);
    rpc ChannelGetAuthors (ChannelGetAuthorsParam) returns (ChannelGetAuthorsResponse);
    rpc ChannelGetFollowers (ChannelGetFollowersParam) returns (ChannelGetFollowersResponse);
    rpc ChannelGetSubscribers (ChannelGetSubscribersParam) returns (ChannelGetSubscribersResponse); // Policy?: should channel owner see this? or just see the follwers
    rpc ChannelBlocked (ChannelBlockedParam) returns (ChannelBlockedResponse); // Policy: NOT YET > Difterent form profile blocks
    rpc ChannelAvatarGetList (ChannelAvatarGetListParam) returns (ChannelAvatarGetListResponse);

    // Dep
    rpc ChannelGetFollowings (ChannelGetFollowingsParam) returns (ChannelGetFollowingsResponse); // move to profile
}


// CrDU
message ChannelCreateChannelParam {
    uint32 channel_cid = 1;
    uint32 creator_profile_cid = 2;
    string channel_title = 3; // or _name
    string user_name = 4;
    string about = 15;
}

message ChannelCreateChannelResponse {

}


message ChannelEditChannelParam {
    uint32 channel_cid = 1;
    uint32 by_profile_cid = 2;
    bool set_new_title = 3;
    string new_title = 4;
    bool set_new_about = 5;
    string new_about = 6;
}

message ChannelEditChannelResponse {

}

message ChannelDeleteChannelParam {
    uint32 channel_cid = 1;
    uint32 by_profile_cid = 2;
}

message ChannelDeleteChannelResponse {

}


// Author
message ChannelAddAuthorParam {
    // NOT NOW
}

message ChannelAddAuthorResponse {
}


message ChannelChangeAuthorPermissionParam {
    // NOT NOW
}

message ChannelChangeAuthorPermissionResponse {
}


message ChannelRemoveAuthorParam {
    // NOT NOW
}

message ChannelRemoveAuthorResponse {
}


// Follow
message ChannelFollowChannelParam {
    uint32 channel_cid = 1;
    uint32 by_profile_cid = 2;
}

message ChannelFollowChannelResponse {
}


message ChannelUnFollowChannelParam {
    uint32 channel_cid = 1;
    uint32 by_profile_cid = 2;
}

message ChannelUnFollowChannelResponse {
}


message ChannelRemoveFollowersParam {
    // NOT NOW
}

message ChannelRemoveFollowersResponse {
}


// Subscribe
message ChannelSubscribeParam {
    uint32 channel_cid = 1;
    uint32 by_profile_cid = 2;
}

message ChannelSubscribeResponse {
}


message ChannelUnSubscribeParam {
    uint32 channel_cid = 1;
    uint32 by_profile_cid = 2;
}

message ChannelUnSubscribeResponse {
}


message ChannelRemoveSubscribersParam {
    // NTO NOW
}

message ChannelRemoveSubscribersResponse {
}


// Privacy
message ChannelChangePrivacyParam {
    // NOT NOW
}

message ChannelChangePrivacyResponse {

}


message ChannelChangeDefaultPermissionParam {
    // NOT NOW
}

message ChannelChangeDefaultPermissionResponse {
}


message ChannelRevokeLinkParam {
    // NOT NOW
}

message ChannelRevokeLinkResponse {
}


message ChannelChangeUsernameParam {
    // NOT NOW
}

message ChannelChangeUsernameResponse {
}


message ChannelBlockChannelParam {
    // NOT NOW
}

message ChannelBlockChannelResponse {
}


// Messages
message ChannelSendMessageParam {
    uint32 channel_id = 1;
    NewMessageInput message_input = 2;
}

message ChannelSendMessageResponse {

}


message ChannelEditMessageParam {
    uint32 channel_id = 1;
    uint32 by_profile_cid = 3;
    string new_text = 2;
}

message ChannelEditMessageResponse {

}


message ChannelPinMessageParam {
    uint32 channel_id = 1;
}

message ChannelPinMessageResponse {

}


message ChannelUnPinMessageParam {
    uint32 channel_id = 1;
}

message ChannelUnPinMessageResponse {

}


message ChannelDeleteMessagesParam {
    uint32 channel_cid = 1;
    uint32 by_profile_cid = 2;
    repeated uint64 message_gids = 3;
}

message ChannelDeleteMessagesResponse {

}


message ChannelClearHistoryParam {
    uint64 from_message_gid = 3;// NOT NOW
}

message ChannelClearHistoryResponse {
}


// Others
message ChannelAvatarAddParam {
    uint32 channel_id = 1;
    uint64 file_id = 2;
}

message ChannelAvatarAddResponse {}


message ChannelAvatarChangeParam {
    // NOT NOW
}

message ChannelAvatarChangeResponse {
}


message ChannelAvatarDeleteParam {
    uint32 channel_id = 1;
}

message ChannelAvatarDeleteResponse {}


message ChannelAvatarGetListParam {
    uint32 channel_id = 1;
}

message ChannelAvatarGetListResponse {}


message ChannelSendDoingActionParam {
    // NOT NOW
}

message ChannelSendDoingActionResponse {
}


message ChannelReportChannelParam {
    // NOT NOW
}

message ChannelReportChannelResponse {
}


message ChannelReportMessageParam {
    // NOT NOW
}

message ChannelReportMessageResponse {
}


// Views
message ChannelGetFullParam {
}

message ChannelGetFullResponse {
}


message ChannelGetMessagesListParam {
}

message ChannelGetMessagesListResponse {
}


message ChannelGetMediaListParam {
}

message ChannelGetMediaListResponse {
}


message ChannelGetAuthorsParam {
}

message ChannelGetAuthorsResponse {
}


message ChannelGetFollowersParam {
}

message ChannelGetFollowersResponse {
}


message ChannelGetFollowingsParam {
}

message ChannelGetFollowingsResponse {
}


message ChannelGetSubscribersParam {
}

message ChannelGetSubscribersResponse {
}


message ChannelBlockedParam {
}

message ChannelBlockedResponse {
}


/*

message Param {
}

message Response {
}

*/

















